# pypipegzip

./: .gitignore  .myenv  README.md  README.rst  TODO.txt  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py  version.py
pypipegzip/: pypipegzip.py  static.py  version.py
scripts/: install_from_pypi.py
src/pypipegzip/: pypipegzip.py  static.py
