[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypipegzip"
version = "0.0.24"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "faster read of gzip files using a pipe to zcat(1)"
readme = "README.md"
license = "MIT"
keywords=[
    "pipe",
    "pipeline",
    "gzip",
    "read",
    "speed",
    "pypipegzip",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pypipegzip"
"Bug Tracker" = "https://github.com/veltzer/pypipegzip/issues"
"Documentation" = "https://veltzer.github.io/pypipegzip"
"Download" = "https://pypi.org/project/pypipegzip/"
"Repository" = "https://github.com/veltzer/pypipegzip"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pypipegzip"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pypipegzip/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
